[package]
name = "Hacktech2018"
version = "0.1.0"
authors = ["saresend <saresend@usc.edu>"]

[dependencies]
diesel = { version = "1.0.0", features = ["sqlite"] }
dotenv = "0.9.0"
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rand = "0.4"
ws = "0.7.3"
serde = "1.0.27"
serde_derive = "1.0.27"
geo = "0.7.1"
rocket_cors = "0.2.3"
lazy_static = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
